Switched isBasicPathByValue from BFS to DFS which fulfills all requirements for MS1. MS2 will be started tomorrow.